--- a/src/main/webapp/WEB-INF/views/schedule/layout.html
+++ b/src/main/webapp/WEB-INF/views/schedule/layout.html
@@ -4,7 +4,7 @@
 <head th:fragment="head(title, links, scripts)">
     
     <!--/*  Title will be replaced by their respective titles in the calling template. */-->
-    <title th:replace="${title}">Task List</title>
+    <title th:replace="${title}">Schedule List</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     
     <!--/* Default links; can be replaced by the calling templates */-->
