--- a/src/main/webapp/WEB-INF/views/schedule/updateschedule.html
+++ b/src/main/webapp/WEB-INF/views/schedule/updateschedule.html
@@ -38,7 +38,7 @@
 
 <p>
 					<input id="id"
-						type="hidden" th:field="*{id}" />
+						type="hidden" th:field="*{scheduleID}" />
 				</p>
 				<p>
 					 <input id="scheduleGeneratedAt"
