--- a/src/main/webapp/WEB-INF/views/course/addCourse1.html
+++ b/src/main/webapp/WEB-INF/views/course/addCourse1.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Add Course</title>
-    <link rel="stylesheet" th:href="@{/css/bootstrap.css}"></link>
+<html xmlns:th="http://www.thymeleaf.org">
+<!--/* Title of this template will be passed to the head fragment along with custom links and scripts */-->
+<head th:replace="task/layout :: head(~{this :: title}, ~{this :: .custom-link}, ~{this :: .custom-script})">
+    <title>Schedule List</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="../../../resources/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/resources/css/bootstrap.min.css}"/>
+    <link href="../../../resources/css/core.css" rel="stylesheet" media="screen" th:href="@{/resources/css/core.css}"/>
+    
+    <!-- Custom links for this page only -->
+    <link class="custom-link" href="../../../resources/css/task/task.css" th:href="@{/resources/css/task/task.css}" />
+    
+    <script src="../../../resources/js/jquery.min.js" th:src="@{/resources/js/jquery.min.js}"></script>
+    <script src="../../../resources/js/bootstrap.min.js" th:src="@{/resources/js/bootstrap.min.js}"></script>
+
+    <!-- Custom scripts for this page only -->
+    <script class="custom-script" src="../../../resources/js/task/task.js" th:src="@{/resources/js/task/task.js}"></script>
 </head>
-<body class="container">
-<br/>
-<h1>Add course</h1>
-<br/><br/>
-<div class="with:80%">
+<body>
+
+<!--/* The element with breadcrumb class will be passed to the header fragment */-->
+<header th:insert="schedule/layout :: header(~{ :: .breadcrumb})">
+    <ol class="breadcrumb container">
+        <li><a href="#" th:href="@{/}">Home</a></li>
+        <li><a href="#" th:href="@{/}">Create Course</a></li>
+    </ol>
+</header>
     <form class="form-horizontal" action="#" th:action="@{/addnewcourse}" th:object="${newCourse}"
 			method="post">
 			<fieldset>
@@ -56,6 +71,8 @@
         </div>
         </fieldset>
     </form>
-</div>
+
+
+<footer th:replace="schedule/layout :: footer">Footer</footer>
 </body>
 </html>
