--- a/src/main/webapp/WEB-INF/views/course/courseList.html
+++ b/src/main/webapp/WEB-INF/views/course/courseList.html
@@ -1,25 +1,44 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<!--/* Title of this template will be passed to the head fragment along with custom links and scripts */-->
+<head th:replace="task/layout :: head(~{this :: title}, ~{this :: .custom-link}, ~{this :: .custom-script})">
+    <title>Schedule List</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="../../../resources/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/resources/css/bootstrap.min.css}"/>
+    <link href="../../../resources/css/core.css" rel="stylesheet" media="screen" th:href="@{/resources/css/core.css}"/>
+    
+    <!-- Custom links for this page only -->
+    <link class="custom-link" href="../../../resources/css/task/task.css" th:href="@{/resources/css/task/task.css}" />
+    
+    <script src="../../../resources/js/jquery.min.js" th:src="@{/resources/js/jquery.min.js}"></script>
+    <script src="../../../resources/js/bootstrap.min.js" th:src="@{/resources/js/bootstrap.min.js}"></script>
 
-<!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-<title></title>
-
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-<!-- <link href="../static/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" /> 
- -->
+    <!-- Custom scripts for this page only -->
+    <script class="custom-script" src="../../../resources/js/task/task.js" th:src="@{/resources/js/task/task.js}"></script>
 </head>
 <body>
 
+<!--/* The element with breadcrumb class will be passed to the header fragment */-->
+<header th:insert="course/layout :: header(~{ :: .breadcrumb})">
+    <ol class="breadcrumb container">
+        <li><a href="#" th:href="@{/}">Home</a></li>
+        <li><a href="#" th:href="@{/course}">Course</a></li>
+    </ol>
+</header>
+<body>
+
+<!--/* Insert content fragment with content of the element with id = 'task-list' */-->
+<div th:insert="schedule/layout :: content(~{ :: #schedule-list})">
+ 
+    <div id="schedule-list">
+   <div class="container">
+    <!-- /* Handle the flash message */-->
+    <th:block th:if="${message != null}">
+        <!-- /* The message code is returned from the @Controller */ -->
+        <div th:replace="fragments/alert :: alert (type=${#strings.toLowerCase(message.type)}, message=#{${message.message}(${#authentication.name})})">&nbsp;</div>
+    </th:block>
+   
+</div>
 	<div >
 			 <a href="#" th:href="@{/create}" class="btn btn-info btn-sm">
           <span class="glyphicon glyphicon-plus-sign"></span> Link to Add Course
@@ -74,6 +93,9 @@
 			</tr>
 		</table>
 	</div>
+</div>
+</div>
 
+<footer th:replace="schedule/layout :: footer">Footer</footer>
 </body>
 </html>
