--- a/src/main/webapp/WEB-INF/views/course/editCourse.html
+++ b/src/main/webapp/WEB-INF/views/course/editCourse.html
@@ -1,11 +1,33 @@
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+<!--/* Title of this template will be passed to the head fragment along with custom links and scripts */-->
+<head th:replace="task/layout :: head(~{this :: title}, ~{this :: .custom-link}, ~{this :: .custom-script})">
+    <title>Schedule List</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="../../../resources/css/bootstrap.min.css" rel="stylesheet" media="screen" th:href="@{/resources/css/bootstrap.min.css}"/>
+    <link href="../../../resources/css/core.css" rel="stylesheet" media="screen" th:href="@{/resources/css/core.css}"/>
+    
+    <!-- Custom links for this page only -->
+    <link class="custom-link" href="../../../resources/css/task/task.css" th:href="@{/resources/css/task/task.css}" />
+    
+    <script src="../../../resources/js/jquery.min.js" th:src="@{/resources/js/jquery.min.js}"></script>
+    <script src="../../../resources/js/bootstrap.min.js" th:src="@{/resources/js/bootstrap.min.js}"></script>
 
-<!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-<title>Add course Form</title>
-<link href="../static/css/styles.css" th:href="@{/css/styles.css}" rel="stylesheet" />
+    <!-- Custom scripts for this page only -->
+    <script class="custom-script" src="../../../resources/js/task/task.js" th:src="@{/resources/js/task/task.js}"></script>
 </head>
 <body>
+
+<!--/* The element with breadcrumb class will be passed to the header fragment */-->
+<header th:insert="schedule/layout :: header(~{ :: .breadcrumb})">
+    <ol class="breadcrumb container">
+        <li><a href="#" th:href="@{/}">Home</a></li>
+        <li><a href="#" th:href="@{/}">Edit Course</a></li>
+    </ol>
+</header>
+<!--/* Insert content fragment with content of the element with id = 'task-list' */-->
+<div th:insert="schedule/layout :: content(~{ :: #schedule-update})">
+
 <div id="cedit">
 	<form action="#" th:action="@{/addnewcourse}" th:object="${newCourse}"
 		method="post">
@@ -32,13 +54,10 @@
 
 		</fieldset>
 	</form>
-<!-- <form action="#" th:action="@{/addprerequisite(courseName=$(courseName))}" th:object="${newPrerequisiteCourse}"
-		method="get">
-	
-		<p>
-		<input id="btnAdd" type="submit" value="+prerequisite" />
-		</p>
-</form> -->
 </div>
+</div>
+
+
+<footer th:replace="schedule/layout :: footer">Footer</footer>
 </body>
 </html>
