--- a/src/main/webapp/WEB-INF/views/entryblock/EntryForm.html
+++ b/src/main/webapp/WEB-INF/views/entryblock/EntryForm.html
@@ -23,6 +23,7 @@
     <ol class="breadcrumb container">
         <li><a href="#" th:href="@{/}">Home</a></li>
         <li><a href="#" th:href="@{/schedule}">Schedule</a></li>
+        <li><a href="#" th:href="@{/}">Entry</a></li>
     </ol>
 </header>
 
@@ -43,6 +44,15 @@
 	</form>
 	<br/>
     <table class="table table-hover">
+   	<!-- 	<div class="form-group">
+    <div class="col-sm-2 control-label">
+        <a href="/addEntry" th:href="@{/addEntry}" class="btn btn-info">add</a>
+    </div>
+</div> -->
+ <a href="#" th:href="@{/addEntry}" class="btn btn-info btn-sm">
+          <span class="glyphicon glyphicon-plus-sign"></span> Create Entry
+        </a>
+    <table class="table table-bordered table-striped">
      <thead>
       <tr>
         <th>Entry Name</th>
@@ -52,6 +62,7 @@
         <th>End Date</th>
         <th>Delete</th>
         <th>Edit</th>
+        <th>Action</th>
       </tr>
       </thead>
         <tbody>
@@ -63,6 +74,20 @@
         <td th:text="${entry.endDate}"></td>
         <td><a th:href="@{/deleteentry(entryID=${entry.entryID})}">delete</a></td>
         <td><a th:href="@{/toEdit(entryID=${entry.entryID})}">edit</a></td>
+        <td><div class="dropdown">
+						<button type="button" class="btn dropdown-toggle"
+							id="dropdownMenu1" data-toggle="dropdown">
+							Action <span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu" role="menu"
+							aria-labelledby="dropdownMenu1">
+							<li role="presentation"><a role="menuitem" tabindex="-1"
+								th:href="@{/toEdit(entryID=${entry.entryID})}">Update</a></li>
+
+							<li role="presentation"><a role="menuitem" tabindex="-1"
+								th:href="@{/deleteentry(entryID=${entry.entryID})}">Delete </a></li>
+						</ul>
+					</div></td>
       </tr>
        </tbody>
     </table>
@@ -72,6 +97,7 @@
         <a href="/addEntry" th:href="@{/addEntry}" class="btn btn-info">add</a>
     </div>
 </div>
+
 </div>
 
 <footer th:replace="entryblock/layout :: footer">Footer</footer>
