--- a/src/main/webapp/WEB-INF/views/entryblock/UpdateEntry.html
+++ b/src/main/webapp/WEB-INF/views/entryblock/UpdateEntry.html
@@ -39,6 +39,7 @@
    
 </div>
     <form class="form-horizontal"   th:action="@{/editentry}"  th:object="${entry}" method="post">
+     <form class="form-horizontal"   th:action="@{/editentry}"  th:object="${entry}" method="post">
         <input type="hidden" name="entryID" th:value="*{entryID}" />
         <div class="form-group">
             <label for="entryName" class="col-sm-2 control-label">EntryName</label>
@@ -79,6 +80,7 @@
 
         </div>
     </form>
+
 </div>
 </div>
 
