--- a/src/main/webapp/WEB-INF/views/entryblock/addEntry.html
+++ b/src/main/webapp/WEB-INF/views/entryblock/addEntry.html
@@ -23,6 +23,7 @@
     <ol class="breadcrumb container">
         <li><a href="#" th:href="@{/}">Home</a></li>
         <li><a href="#" th:href="@{/schedule}">Schedule</a></li>
+        <li><a href="#" th:href="@{/}">Create Entry</a></li>
     </ol>
 </header>
 
@@ -65,12 +66,14 @@
             <label for="startDate" class="col-sm-2 control-label">startDate</label>
             <div class="col-sm-10">
                 <input type="date" class="form-control" name="startDate"  id="startDate" />
+                <input id="startDate" type="date" name="startDate" />
             </div>
         </div>
         <div class="form-group">
             <label for="endDate" class="col-sm-2 control-label">endDate</label>
             <div class="col-sm-10">
                 <input type="date" class="form-control" name="endDate"  id="endDate"/>
+                <input type="date"  name="endDate"  id="endDate"/>
             </div>
         </div>
         <div class="form-group">
