--- a/src/main/webapp/WEB-INF/views/schedule/schedule-list.html
+++ b/src/main/webapp/WEB-INF/views/schedule/schedule-list.html
@@ -22,7 +22,7 @@
 <header th:insert="schedule/layout :: header(~{ :: .breadcrumb})">
     <ol class="breadcrumb container">
         <li><a href="#" th:href="@{/}">Home</a></li>
-        <li><a href="#" th:href="@{/schedule}">Schedule</a></li>
+        <li><a href="#" th:href="@{/}">Schedule</a></li>
     </ol>
 </header>
 
