--- a/bin/src/main/webapp/WEB-INF/views/entryblock/addBlock.html
+++ b/bin/src/main/webapp/WEB-INF/views/entryblock/addBlock.html
@@ -21,8 +21,8 @@
 <!--/* The element with breadcrumb class will be passed to the header fragment */-->
 <header th:insert="entryblock/layout :: header(~{ :: .breadcrumb})">
     <ol class="breadcrumb container">
-        <li><a href=" " th:href="@{/}">Home</a ></li>
-        <li><a href="#" th:href="@{/}">Create Block</a ></li>
+        <li><a href="#" th:href="@{/}">Home</a></li>
+        <li><a href="#" th:href="@{/schedule}">Schedule</a></li>
     </ol>
 </header>
 
@@ -38,60 +38,58 @@
     </th:block>
    
 </div>
-   <form class="form-horizontal" action="#" th:action="@{/addnewblock}" th:object="${newBlock}"
-   method="post">
-   <div id="global">
-   <fieldset>
-    <legend>Add New Block</legend>
+    <form class="form-horizontal" action="#" th:action="@{/addnewblock}" th:object="${newBlock}"
+			method="post">
+			<fieldset>
+				<legend>Add New Block</legend>
 
        <div class="form-group">
-     <label for="entryList" class="col-sm-2 control-label">SelectEntry</label> 
-     <div class="col-sm-10">
-     <select
-      th:field="*{entryName}">
-      <option th:each="entryName : ${entryNameList}" th:value="${entryName}"
-       th:text="${entryName}"></option>
-     </select>
-     </div>
-    </div>
-  <div class="form-group">
-     <label for="blockName" class="col-sm-2 control-label">BlockName</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="blockName"  id="blockName" placeholder="blockName"/>
-    </div>
-  </div>
-  <div class="form-group">
-     <label for="FPPNum" class="col-sm-2 control-label">FPPNumber</label>
-    <div class="col-sm-10">
-     <input type="text" class="form-control" name="FPPNum" id="FPPNum" placeholder="0"/>
-    </div>
-  </div>
-  <div class="form-group">
-     <label for="MPPNum" class="col-sm-2 control-label">MPPNumber</label> 
-    <div class="col-sm-10">
-     <input type="text" class="form-control" name="MPPNum" id="MPPNum" placeholder="0"/>
-    </div>
-  </div>
-  <div class="form-group">
-     <label for="startDate" class="col-sm-2 control-label">StartDate</label> 
-    <div class="col-sm-10">
-     <input id="startDate" type="date" name="startDate" />
-    </div>
-  </div>  
-  <div class="form-group">
-     <label for="endDate" class="col-sm-2 control-label">EndDate</label> 
-    <div class="col-sm-10">
-     <input id="endDate" type="date" name="endDate" />
-    </div>
-  </div>
-  <div class="form-group">
+					<label for="entryList" class="col-sm-2 control-label">SelectEntry</label> 
+					<div class="col-sm-10">
+					<select
+						th:field="*{entryName}">
+						<option th:each="entryName : ${entryNameList}" th:value="${entryName}"
+							th:text="${entryName}"></option>
+					</select>
+					</div>
+				</div>
+		<div class="form-group">
+					<label for="blockName" class="col-sm-2 control-label">BlockName</label>
+				<div class="col-sm-10">
+					 <input id="blockName" type="text" th:field="*{blockName}" />
+				</div>
+		</div>
+		<div class="form-group">
+					<label for="FPPNum" class="col-sm-2 control-label">FPPNumber</label>
+				<div class="col-sm-10">
+					<input id="FPPNum" type="text" th:field="*{FPPNum}" placeholder="0"/>
+				</div>
+		</div>
+		<div class="form-group">
+					<label for="MPPNum" class="col-sm-2 control-label">MPPNumber</label> 
+				<div class="col-sm-10">
+					<input id="MPPNum" type="text" th:field="*{MPPNum}" placeholder="0"/>
+				</div>
+		</div>
+		<div class="form-group">
+					<label for="startDate" class="col-sm-2 control-label">StartDate</label> 
+				<div class="col-sm-10">
+					<input id="startDate" type="date" th:field="*{startDate}" />
+				</div>
+		</div>		
+		<div class="form-group">
+					<label for="endDate" class="col-sm-2 control-label">EndDate</label> 
+				<div class="col-sm-10">
+					<input id="endDate" type="date" th:field="*{endDate}" />
+				</div>
+		</div>
+		<div class="form-group">
             <div class="col-sm-2 control-label">
                 <input type="submit" value="Save" class="btn btn-info" />
                 &nbsp; &nbsp; &nbsp;
             </div>
         </div>
         </fieldset>
-        </div>
     </form>
 </div>
 </div>
