--- a/src/main/webapp/WEB-INF/views/entryblock/BlockForm.html
+++ b/src/main/webapp/WEB-INF/views/entryblock/BlockForm.html
@@ -57,8 +57,8 @@
 			<td>FPP Number</td>
 			<td>MPP Number</td>
 			<td>BLock Start Date</td>
-			<th>Block End Date</th>
-			<th>Action</th>
+			<td>Block End Date</td>
+			<td>Action</td>
 		</tr>
 		 </thead>
         <tbody>
