--- a/src/main/webapp/WEB-INF/views/entryblock/EntryForm.html
+++ b/src/main/webapp/WEB-INF/views/entryblock/EntryForm.html
@@ -51,12 +51,12 @@
      <thead>
       <tr>
 
-        <th>Entry Name</th>
-        <th>FPP Number</th>
-        <th>MPP Number</th>
-         <th>Start Date</th>
-        <th>End Date</th>
-        <th>Action</th>
+        <td>Entry Name</td>
+        <td>FPP Number</td>
+        <td>MPP Number</td>
+         <td>Start Date</td>
+        <td>End Date</td>
+        <td>Action</td>
       </tr>
       </thead>
         <tbody>
