--- a/src/main/webapp/WEB-INF/views/entryblock/SectionForm.html
+++ b/src/main/webapp/WEB-INF/views/entryblock/SectionForm.html
@@ -52,13 +52,13 @@
     <table class="table table-bordered table-striped" id="table">
      <thead>
       <tr>
-        <th>Entry</th>
-        <th>Block</th>
-        <th>Track</th>
-         <th>Course</th>
-        <th>Faculty</th>
-        <th>Capacity</th>
-        <th>Action</th>
+        <td>Entry</td>
+        <td>Block</td>
+        <td>Track</td>
+         <td>Course</td>
+        <td>Faculty</td>
+        <td>Capacity</td>
+        <td>Action</td>
       </tr>
       </thead>
         <tbody>
