add message show && fix bug
add message show : block , entry ----yanfeng   section -------xinchen
fix bug ..

--- a/src/main/webapp/WEB-INF/views/entryblock/UpdateSection.html
+++ b/src/main/webapp/WEB-INF/views/entryblock/UpdateSection.html
@@ -69,8 +69,11 @@
             <select
 						th:field="*{facultyName}">
 						<option value="select">Select</option>
-						<option th:each="facultyName : ${facultyNameList}" th:value="${facultyName}"
-							th:text="${facultyName}"></option>
+						 <option value="Steve">Steve</option>
+                  <option value="Nair">Nair</option>
+                   <option value="Mei">Mei</option>
+					<!-- 	<option th:each="facultyName : ${facultyNameList}" th:value="${facultyName}"
+							th:text="${facultyName}"></option> -->
 					</select>
 					</div>
         </div>
