--- a/src/main/webapp/WEB-INF/views/entryblock/SectionForm.html
+++ b/src/main/webapp/WEB-INF/views/entryblock/SectionForm.html
@@ -91,6 +91,7 @@
        </tbody>
     </table>
    </div>
+   </div>
 <footer th:replace="entryblock/layout :: footer">Footer</footer>
 </body>
 </html>
